# ndk-samples

./: .gitignore  mkdocs.yml  requirements.txt  settings.gradle
.github/workflows/: build-pages.yml
gradle/: libs.versions.toml
graphics/: README.md  build.gradle.kts
graphics/src/main/: AndroidManifest.xml
graphics/src/main/cpp/: CMakeLists.txt  android_main.cpp  engine.cpp  engine.h  errno_restorer.h  libapp.map.txt  logging.cpp  logging.h  logging_splitters.h  renderer.cpp  renderer.h
graphics/src/main/java/com/android/ndk/samples/graphics/: MainActivity.kt
graphics/src/main/res/values/: strings.xml  themes.xml
graphics/src/main/res/values-night/: themes.xml
prefab/curl-ssl/app/src/main/cpp/: CMakeLists.txt
vectorization/: README.md
vectorization/src/main/cpp/: auto_vectorization.h  benchmark.cpp  benchmark.h  matrix.h  neon.h
vectorization/src/main/java/com/android/ndk/samples/vectorization/: VectorizationActivity.kt
